--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "morse-code",
   "version": "0.1.0",
-  "homepage": "https://imkaransandhu.github.io/",
+  "homepage": "https://imkaransandhu.github.io/morse-code",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
